# another-one

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release.toml  skills-lock.json
.cargo/: config.toml
.claude/skills/: gpui
.codex/environments/: environment.toml
.github/workflows/: desktop-release.yml  slint-platform-gates.yml
.pi/todos/: 5c8671d8.md
another-one/: README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
another-one-bridge/: Cargo.toml  build.rs
another-one-bridge/src/: embedded_daemon.rs  frb_generated.rs  lib.rs  local_pair.rs  local_registry.rs  pty_drain.rs
another-one-bridge/src/api/: build_info.rs  embedded_daemon.rs  iroh_client.rs  local_session.rs  mod.rs  pair.rs  resources.rs  terminal_engine.rs
another-one/lib/: main.dart
another-one/linux/: CMakeLists.txt
another-one/test/: widget_test.dart
another-one/windows/: CMakeLists.txt
app/: Cargo.toml  build.rs
app/android/: build.gradle.kts  settings.gradle.kts
app/android/app/: build.gradle.kts  proguard-rules.pro
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/dev/anotherone/app/: QrScanLauncher.kt
app/android/app/src/main/res/values/: strings.xml
app/src/: add_agent_modal.rs  app.rs  app_event.rs  assets.rs  background_ops.rs  build_info.rs  control.rs  create_branch_modal.rs  custom_actions_modal.rs  daemon_host.rs  gh_check.rs  git_workspace.rs  iroh_client.rs  layout.rs  leakscope.rs  left_sidebar.rs  lib.rs  main.rs  mcp_orchestrator.rs  mcp_page.rs  mobile.rs  new_task_modal.rs  pair_mobile.rs  panels.rs  project_page.rs  project_workflows.rs  resource_indicator.rs  resource_usage.rs  right_sidebar.rs  session_host.rs  settings_page.rs  shortcuts.rs  terminal_runtime.rs  terminal_theme.rs  text_edit.rs  theme.rs  titlebar.rs  tokens.rs  updater.rs  updater_install.rs
app/src/platform/: android.rs  linux.rs  macos.rs  mod.rs  windows.rs
app/tests/: daemon_dispatch_harness.rs
core/: Cargo.toml
core/src/: agents.rs  clients.rs  command_env.rs  daemon_embed.rs  git_actions.rs  git_operation.rs  git_service.rs  leakscope.rs  lib.rs  open_in.rs  process.rs  project_service.rs  project_store.rs  resource_usage.rs  section.rs  shortcuts.rs  sqlite_persistence.rs  state_authority.rs  task_launcher.rs  terminal_launch.rs  terminal_manager.rs  terminal_types.rs
core/src/capability/: bootstrap.rs  mod.rs
core/src/git/: mod.rs
core/src/git_remote/: github_cli.rs  mod.rs  types.rs
core/src/github/: cli.rs  missing.rs  mod.rs
core/src/mcp/: catalog.rs  mod.rs  orchestrator.rs  registry.rs  server.rs  tools.rs
core/src/mcp/adapters/: amp.rs  claude_code.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
core/src/platform/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
core/src/scope/: mod.rs  tool_probe.rs
core/src/terminal_engine/: alacritty.rs  mod.rs
daemon/: Cargo.toml
daemon-client/: Cargo.toml
daemon-client/src/: frame.rs  iroh_transport.rs  lib.rs  pairing_url.rs  protocol.rs  session.rs  status.rs
daemon-client/tests/: connect_to_daemon.rs
daemon-proto/: Cargo.toml
daemon-proto/src/: lib.rs
daemon-sandbox/: Cargo.toml
daemon-sandbox/src/: frame.rs  lib.rs  main.rs  pty.rs  registry.rs  sandbox.rs  transport_iroh.rs  transport_mcp.rs  transport_ws.rs
daemon-sandbox/tests/: mcp_uds_roundtrip.rs
daemon-transport/: Cargo.toml
daemon-transport/src/: in_memory.rs  lib.rs  uds.rs
daemon/src/: dispatch.rs  frame.rs  lib.rs  main.rs  pty.rs  registry.rs  sandbox.rs  transport_iroh.rs  transport_mcp.rs  transport_ws.rs
daemon/src/commands/: agent_settings.rs  mod.rs  open_in.rs
daemon/src/terminal/: frame.rs  launch.rs  mod.rs  pacer.rs  task.rs  term_config.rs
daemon/tests/: mcp_uds_roundtrip.rs  terminal_task_soak.rs
desktop/: Cargo.toml  build.rs
desktop/assets/app-icon/linux/: another-one.desktop
desktop/assets/app-icon/macos/: AnotherOne.icns
desktop/src/: add_agent_modal.rs  agent_icons.rs  app.rs  assets.rs  build_info.rs  create_branch_modal.rs  custom_actions_modal.rs  daemon_host.rs  git_diff_pane.rs  layout.rs  leakscope.rs  left_sidebar.rs  main.rs  mcp_orchestrator.rs  mcp_page.rs  new_task_modal.rs  open_in.rs  pair_mobile.rs  panels.rs  project_page.rs  resource_indicator.rs  resource_usage.rs  right_sidebar.rs  settings_page.rs  shortcuts.rs  task_launcher.rs  terminal_runtime.rs  titlebar.rs  tokens.rs  updater.rs
desktop/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
docs/: README.md  codex-hooks.json.example  codex-hooks.md
docs/apps/: another-one-bridge.md  another-one.md  daemon-sandbox.md  desktop.md  mobile-core.md  mobile.md  slint-poc.md
docs/architecture/: daemon-owned-state-authority.md  daemon-transport-rust.md  frb-tokio-runtime.md  git-mv-for-restructures.md  gpui-base-component-inventory.md  (+28 more)
makepad-poc/: Cargo.toml
mcp-shim/: Cargo.toml
mcp-shim/src/: main.rs
mobile/: flutter_rust_bridge.yaml  pubspec.yaml
mobile-core/: Cargo.toml
mobile-core/src/: frb_generated.rs
mobile-core/src/api/: iroh_client.rs  mod.rs
scripts/: aone-screenshot.sh  build-mobile.sh  build-production-and-open.sh  codex-session-start-hook.sh  dev-watch.sh  package-linux.sh  package-macos.sh  pi-session-start-extension.ts  render_app_icon.swift  test-mobile-pair.sh
slint-poc/: Cargo.toml  build.rs
slint-poc/src/: daemon_ticket.rs  lib.rs  main.rs  overlays.rs  platform.rs  resource.rs  right_inspector.rs  settings.rs  style.rs  terminal_colors.rs  terminal_input.rs  terminal_runs.rs  terminal_target.rs  terminal_view.rs  titlebar.rs  toast.rs  util.rs  visual_fixtures.rs  workspace_shell.rs
slint-poc/ui/: app.slint  components.slint  overlays.slint  settings.slint
src/: add_agent_modal.rs  agents.rs  app.rs  git_actions.rs  keys.rs  layout.rs  left_sidebar.rs  main.rs  new_task_modal.rs  open_in.rs  panels.rs  project_page.rs  project_store.rs  resource_indicator.rs  resource_usage.rs  right_sidebar.rs  settings_page.rs  shortcuts.rs  terminal.rs  terminal_launch.rs  terminal_runtime.rs  titlebar.rs
(+196 files in other folders)
