[package]
name = "another-one"
version = "0.1.0"
edition = "2021"
description = "AnotherOne desktop app using Zed GPUI"

[features]
default = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]

# GPUI: https://github.com/zed-industries/zed/tree/main/crates/gpui
# Using the crates.io release (published from that tree). Pin `rev = "…"` if you need git main.
[dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1"
gpui = "0.2.2"
hotpath = "0.15"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
