[package]
name = "another_one_bridge"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared Rust bridge crate consumed by both desktop and mobile AnotherOne clients via flutter_rust_bridge"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
iroh = "0.98.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Android-only log bridge for our tracing events.
[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
