[package]
name = "another-one-core"
version = "0.1.23"
edition = "2021"
description = "Headless domain logic for the AnotherOne desktop app — shared by both the GPUI UI and the (future) sandbox/mobile daemon."
publish = false

[lib]
name = "another_one_core"

[features]
default = ["daemon-host"]
# Compile in `ProjectStore::save` / `load` real bodies (filesystem
# persistence). Pure-client binaries (mobile today, future
# embedded web) build without this feature so the binary never
# touches the user's `~/.config/another-one/projects.json` — the
# daemon is the only writer of that file. Default-on so desktop's
# normal `cargo build` keeps working; mobile's build script disables
# default features and forwards from `app/Cargo.toml`.
#
# This is the runtime-role split ("am I the registry host?") encoded
# at compile time. Replaces the v0.1.18-class bug where a pure-
# client binary loaded then re-saved a partial copy of the daemon's
# store and corrupted it on schema drift.
daemon-host = []
# Forwarded from the desktop crate's `hotpath` / `hotpath-alloc` features;
# controls whether `#[hotpath::measure]` in moved code actually records
# anything. The `hotpath` crate is always linked (the proc-macro needs to
# resolve unconditionally), but its features gate whether it does work
# at runtime — so neither feature on means the attribute is effectively
# a no-op, matching desktop's pre-extraction setup.
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
# Forces the desktop-side 1 Hz LEAKSCOPE sampler on in release builds.
# Counters themselves are always on (one relaxed atomic per PTY chunk,
# negligible); debug builds auto-start the sampler via
# `debug_assertions`. This feature only matters for packaged/CI builds
# where you want the sampler logs without a dev profile.
leakscope = []
# Forwarded from the desktop `test-harness` feature so
# `app/tests/*` integration tests can build a `ProjectStore` from
# in-memory fixtures via `ProjectStore::from_projects_for_test`.
test-harness = []

[dependencies]
alacritty_terminal = "0.26.0"
anyhow = "1"
daemon-proto = { path = "../daemon-proto" }
dirs = "5"
hotpath = "0.15"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `rusqlite` with the `bundled` feature compiles SQLite from source
# rather than linking against the system `libsqlite3`. Greenfield app,
# small binary-size hit (~1 MB), but it means no install-time guess
# about which SQLite version the user happens to have, and the macOS
# / Linux desktop builds we ship are byte-identical to what we test
# against. WAL + `synchronous=NORMAL` are configured at connection
# open in `core::project_store::sqlite_persistence`.
#
# `bundled` ships SQLite >= 3.40, which means JSON1 (`json_set` /
# `json_extract`) is always available without a feature gate.
rusqlite = { version = "0.31", features = ["bundled"] }
# `toml_edit` preserves formatting and comments on write, which the
# MCP registry's Codex adapter needs so replacing registry-owned
# `[mcp_servers.*]` rows doesn't trash user-authored comments or
# re-order sibling entries in `~/.codex/config.toml`.
toml_edit = "0.22"
# `sync` only — brings in `tokio::sync::broadcast`, which we use
# with its synchronous `send` / `try_recv` surface. No runtime is
# constructed in core; broadcast's send + try_recv do not require one.
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

# `libc` is used by `core::platform`:
#   * macOS / iOS — `sysctlbyname` for memory totals + Darwin
#     `proc_pidinfo`-family calls for process samples.
#   * Linux / Android — `sysconf` for clock-ticks and page-size
#     during `/proc/<pid>/stat` interpretation.
# Windows is the one platform that needs none of this; gate the dep
# to skip it there.
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"
