[package]
name = "daemon-client"
version = "0.1.4"
edition = "2021"
description = "Iroh client for AnotherOne — dials a desktop daemon's pairing endpoint and runs the wire protocol from the client side."
publish = false

[lib]
name = "daemon_client"

[dependencies]
anyhow = "1"
# Wire types live here. Server and client deserialize the same
# definitions; no hand-mirrored protocol module to drift.
daemon-proto = { path = "../daemon-proto" }
# Abstract Session / TransportFactory trait surface this crate
# implements via `IrohTransportFactory`. Concrete impl lives here
# (rather than in a third crate) because the iroh deps are already
# pulled in for the legacy session API; splitting them later costs
# nothing once the legacy API retires.
daemon-transport = { path = "../daemon-transport" }
futures-core = "0.3"
# Pinned to the same major as `daemon-sandbox` so the wire format
# stays in lockstep — every `Control` / `WorkerReply` change must land
# on both sides at once.
iroh = "0.98.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `rt-multi-thread` is required: iroh's UDP sockets and internal
# actors only run under tokio. `io-util` provides `AsyncWriteExt` /
# `AsyncReadExt` for framed reads/writes against `iroh::endpoint::{SendStream, RecvStream}`.
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "io-util"] }
tracing = "0.1"
# `urlencoding::decode` parses %-encoded relay URLs out of pairing
# strings — same dep the `daemon` crate uses, kept in lockstep.
urlencoding = "2"

# Integration tests dial a real `daemon::run_endpoint` instance to
# verify the wire protocol matches end-to-end. Pulling daemon in as a
# dev-dep (not a runtime dep) keeps the client crate lean for
# downstream consumers.
[dev-dependencies]
daemon = { path = "../daemon" }
tempfile = "3"
tracing-subscriber = "0.3"
