[package]
name = "daemon-sandbox"
version = "0.1.0"
edition = "2021"
description = "Throwaway daemon for mobile-companion sandbox: bridges a PTY over WebSocket and Iroh QUIC"
publish = false

[[bin]]
name = "daemon-sandbox"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "signal"] }
portable-pty = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
iroh = "0.98.1"
anyhow = "1.0.102"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
urlencoding = "2"
