[package]
name = "daemon-sandbox"
version = "0.1.0"
edition = "2021"
description = "Daemon for mobile-companion. Library form is embedded by the desktop app; the binary form is a standalone PTY sandbox for smoke-testing."
publish = false

[lib]
name = "daemon_sandbox"
path = "src/lib.rs"

[[bin]]
name = "daemon-sandbox"
path = "src/main.rs"

[dependencies]
another-one-core = { path = "../core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "signal"] }
portable-pty = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
iroh = "0.98.1"
anyhow = "1.0.102"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
urlencoding = "2"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
