[package]
name = "daemon-transport"
version = "0.1.0"
edition = "2021"
description = "Abstract transport surface for the AnotherOne daemon. Daemon handlers and clients work against `Session` / `Transport` / `TransportFactory` here; concrete impls (iroh, UDS, in-memory) live in their own crates so the network stack can be swapped without touching either side."
publish = false

[lib]
name = "daemon_transport"

[dependencies]
daemon-proto = { path = "../daemon-proto" }
# `futures-core` for the `Stream` trait — pure trait crate, no executor
# pulled in. Concrete transports add their own executor where they need
# one (tokio for iroh / UDS, anything for in-memory).
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
