[package]
name = "daemon-transport"
version = "0.1.9"
edition = "2021"
description = "Abstract transport surface for the AnotherOne daemon. Daemon handlers and clients work against `Session` / `Transport` / `TransportFactory` here; concrete impls (iroh, UDS, in-memory) live in their own crates so the network stack can be swapped without touching either side."
publish = false

[lib]
name = "daemon_transport"

[dependencies]
daemon-proto = { path = "../daemon-proto" }
# `futures-core` for the `Stream` trait — pure trait crate, no executor
# pulled in. Concrete transports add their own executor where they need
# one (tokio for iroh / UDS, anything for in-memory).
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
# In-memory transport uses tokio mpsc/oneshot/Notify to wire the two
# halves together. Sync-only feature set keeps this crate light;
# integrators that need a runtime bring their own.
tokio = { version = "1", features = ["sync", "rt", "macros", "net", "io-util"] }
# UDS transport encodes ControlEnvelope / WorkerReplyEnvelope as JSON
# over its frame payload. Same wire shape the iroh stack uses, so
# a UDS daemon is interchangeable with an iroh one at the verb layer.
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tempfile = "3"
