[package]
name = "daemon"
version = "0.1.17"
edition = "2021"
description = "AnotherOne daemon. Library form is embedded by the desktop app and accepts iroh client connections; the binary form is a standalone PTY sandbox kept around for smoke-testing the daemon protocol in isolation."
publish = false

[lib]
name = "daemon"
path = "src/lib.rs"

# Bin keeps its `daemon-sandbox` name — that name still matches its
# identity (a sandboxed dev driver for the daemon lib), and pinning a
# different name from the lib avoids the cargo "two artifacts share a
# name" surprise where the bin can shadow the lib in build paths.
[[bin]]
name = "daemon-sandbox"
path = "src/main.rs"

[dependencies]
another-one-core = { path = "../core" }
daemon-proto = { path = "../daemon-proto" }
daemon-transport = { path = "../daemon-transport" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "signal"] }
portable-pty = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
iroh = "0.98.1"
anyhow = "1.0.102"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
urlencoding = "2"
rand = "0.9"
dirs = "5"
# For the MCP UDS hardening path: umask(2) during bind so the socket
# is never world-accessible; geteuid(2) for a hostile-`$USER`-safe
# per-user socket path fallback when `$XDG_RUNTIME_DIR` is absent.
libc = "0.2"

[dev-dependencies]
tempfile = "3"
