[package]
name = "another-one"
version = "0.1.0"
edition = "2021"
description = "AnotherOne desktop app using Zed GPUI"

[features]
default = []
hotpath = ["hotpath/hotpath", "another-one-core/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "another-one-core/hotpath-alloc"]
# Forces the 1 Hz LEAKSCOPE sampler on in release builds (VmRSS, PTY
# bytes in-flight, drain stats, live tab count printed to stderr every
# second). Debug builds auto-enable the sampler via `debug_assertions`
# and don't need this feature. Counter call sites are always compiled
# in so the sampler always has data when enabled.
leakscope = ["another-one-core/leakscope"]

# GPUI: https://github.com/zed-industries/zed/tree/main/crates/gpui
# Using the crates.io release (published from that tree). Pin `rev = "…"` if you need git main.
[dependencies]
alacritty_terminal = "0.26.0"
another-one-core = { path = "../core" }
anyhow = "1"
daemon-sandbox = { path = "../daemon-sandbox" }
gpui = "0.2.2"
hotpath = "0.15"
libc = "0.2"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# `sync` is used by the GPUI render tick to drain worker replies via
# `broadcast::Receiver::try_recv` (no runtime required for that). The
# `rt-multi-thread` feature is needed so `daemon_host` can construct a
# dedicated `tokio::runtime::Runtime` on an OS thread for the embedded
# iroh endpoint; GPUI itself remains tokio-free.
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
tempfile = "3"
