[package]
name = "mobile_core"
version = "0.1.0"
edition = "2021"
publish = false
description = "Mobile-side Rust core — Iroh client for the AnotherOne companion app, exposed to Dart via flutter_rust_bridge"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
iroh = "0.98.1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
